message TemplightHeader {
  required uint32 version = 1;
  optional string source_file = 2;
}

message TemplightEntry {
  enum InstantiationKind {
    TemplateInstantiation = 0;
    DefaultTemplateArgumentInstantiation = 1;
    DefaultFunctionArgumentInstantiation = 2;
    ExplicitTemplateArgumentSubstitution = 3;
    DeducedTemplateArgumentSubstitution = 4;
    PriorTemplateArgumentSubstitution = 5;
    DefaultTemplateArgumentChecking = 6;
    ExceptionSpecInstantiation = 7;
    Memoization = 8;
  }
  
  message TemplateName {
//     oneof rep {
//       string name = 1;
//       bytes compressed_name = 2;
//     }
    optional string name = 1;
    optional bytes compressed_name = 2;
  }
  
  message SourceLocation {
    optional string file_name = 1;
    required uint32 file_id = 2;
    required uint32 line = 3;
    optional uint32 column = 4;
  }
  
  message Begin {
    required InstantiationKind kind = 1;
    required TemplateName name = 2;
    required SourceLocation location = 3;
    optional double time_stamp = 4;
    optional uint64 memory_usage = 5;
  }
  
  message End {
    optional double time_stamp = 1;
    optional uint64 memory_usage = 2;
  }
  
//   oneof begin_or_end {
//     Begin begin = 1;
//     End end = 2;
//   }
  optional Begin begin = 1;
  optional End end = 2;
}

message TemplightTrace {
  required TemplightHeader header = 1;
  repeated TemplightEntry entries = 2;
}

message TemplightTraceCollection {
  repeated TemplightTrace traces = 1;
}
